# Clockwise

./: .eslintrc.json  .prettierrc  SISTEMA_POMODORO.md  SISTEMA_TEMPO_REGRESSIVO.md  force_window_size.sh  package-lock.json  package.json  pnpm-lock.yaml  reset_panel.sh  setup_panel.sh  start_clockwise.sh  tailwind.config.js  tasks.db  test_resize.sh  vite.config.ts
src/: App.tsx  global.css  vite-env.d.ts
src-tauri/: Cargo.toml  tasks.db  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: CalendarIcon.tsx  CalendarStartIcon.tsx  CirclePlusIcon.tsx  ClockIcon.tsx  ClockStartIcon.tsx  CustomCheckbox.tsx  PlusSuccessIcon.tsx  SettingsIcon.tsx  index.ts
src/componnets/: Calendar.css  Calendar.tsx  DateInput.tsx  PomodoroSessionsView.tsx  TaskButton.tsx  TaskCard.tsx  TaskEditModal.tsx  TaskFilter.tsx  TaskFooter.tsx  TaskList.tsx  TaskListView.tsx  TaskModal.tsx  TimeInput.tsx  VolumeSlider.tsx
src/hooks/: usePomodoroChecker.ts
src/store/: task.store.ts
src/styles/: globals.css
src/utils/: format.ts  time.ts
